==> x893/STM32F429i-Disco_OSC/uboszi_lib/adc.c <==
#include "adc.h"

void ADC_change_Frq(uint32_t n)
{
	TIM_TimeBaseInitTypeDef TIM_TimeBaseStructure;
	uint32_t prescaler, period;

	// Timer anhalten
	TIM_Cmd(TIM2, DISABLE);

	switch (n)
	{
	case 0: // 5s=>5Hz=5s
		prescaler = 5375;
		period = 3124;
		break;
	case 1: // 2s=>12,5Hz=80ms
		prescaler = 2687;
		period = 2499;
		break;
	case 2: // 1s=>25Hz=40ms
		prescaler = 1343;
		period = 2499;
		break;
	case 3: // 500ms=>50Hz=20ms
		prescaler = 671;
		period = 2499;
		break;
	case 4: // 200ms=>125Hz=8ms
		prescaler = 335;
		period = 1999;
		break;
	case 5: // 100ms=>250Hz=4ms
		prescaler = 167;
		period = 1999;
		break;
	case 6: // 50ms=>500Hz=2ms
		prescaler = 83;
		period = 1999;
		break;
	case 7: // 20ms=>1,25kHz=800us
		prescaler = 41;
		period = 1599;
		break;
	case 8: // 10ms=>2,5kHz400us
		prescaler = 20;
		period = 1599;
		break;
	case 9: // 5ms=>5kHz=200us
		prescaler = 20;
		period = 799;
		break;
	case 10: // 2ms=>12,5kHz=80us
		prescaler = 20;
		period = 319;
		break;
	case 11: // 1ms=>25kHz=40us
		prescaler = 20;
		period = 159;
		break;
	case 12: // 500us=>50kHz=20us
		prescaler = 20;
		period = 79;
		break;
	case 13: // 200us=>125kHz=8us
		prescaler = 20;
		period = 31;
		break;
	case 14: // 100us=>250kHz=4us
		prescaler = 20;
		period = 15;
		break;
	case 15: // 50us=>500kHz=2us
		prescaler = 20;
		period = 7;
		break;
	case 16: // 25us=>1MHz=1us
		prescaler = 20;
		period = 3;
		break;
	default:
		prescaler = OSZI_TIM2_PRESCALE;
		period = OSZI_TIM2_PERIODE;
	}

	// einstellen der neuen Werte
	TIM_TimeBaseStructure.TIM_Period = period;
	TIM_TimeBaseStructure.TIM_Prescaler = prescaler;
	TIM_TimeBaseStructure.TIM_ClockDivision = TIM_CKD_DIV1;
	TIM_TimeBaseStructure.TIM_CounterMode = TIM_CounterMode_Up;
	TIM_TimeBaseInit(TIM2, &TIM_TimeBaseStructure);

	// Timer wieder starten, falls notwendig
	if (ADC_UB.status != ADC_READY)
	{
		// Timer2 enable
		TIM_ARRPreloadConfig(TIM2, ENABLE);
		TIM_Cmd(TIM2, ENABLE);
	}
}

void ADC_change_Mode(uint32_t n)
{
	DMA_InitTypeDef DMA_InitStructure;

	// Merker setzen
	ADC_UB.dma_status = 1;

	// Timer analten
	TIM_Cmd(TIM2, DISABLE);

	// DMA-Disable
	DMA_Cmd(ADC1_DMA_STREAM, DISABLE);
	// warten bis DMA-Stream disable
	while (DMA_GetCmdStatus(ADC1_DMA_STREAM) == ENABLE)
		;
	DMA_DeInit(ADC1_DMA_STREAM);

	// DMA-Config
	DMA_InitStructure.DMA_Channel = ADC1_DMA_CHANNEL;
	DMA_InitStructure.DMA_PeripheralBaseAddr = (uint32_t)ADC1_CDR_ADDRESS;
	DMA_InitStructure.DMA_Memory0BaseAddr = (uint32_t) & ADC_DMA_Buffer_A;
	DMA_InitStructure.DMA_DIR = DMA_DIR_PeripheralToMemory;
	DMA_InitStructure.DMA_BufferSize = ADC1d_ANZ * ADC_ARRAY_LEN;
	DMA_InitStructure.DMA_PeripheralInc = DMA_PeripheralInc_Disable;
	DMA_InitStructure.DMA_MemoryInc = DMA_MemoryInc_Enable;
	DMA_InitStructure.DMA_PeripheralDataSize = DMA_PeripheralDataSize_HalfWord;
	DMA_InitStructure.DMA_MemoryDataSize = DMA_MemoryDataSize_HalfWord;
	DMA_InitStructure.DMA_Mode = DMA_Mode_Circular;
	DMA_InitStructure.DMA_Priority = DMA_Priority_High;
	DMA_InitStructure.DMA_FIFOMode = DMA_FIFOMode_Disable;
	DMA_InitStructure.DMA_FIFOThreshold = DMA_FIFOThreshold_HalfFull;
	DMA_InitStructure.DMA_MemoryBurst = DMA_MemoryBurst_Single;
	DMA_InitStructure.DMA_PeripheralBurst = DMA_PeripheralBurst_Single;
	DMA_Init(ADC1_DMA_STREAM, &DMA_InitStructure);

	if (n != 1)
	{
		// Double-Buffer-Mode
		ADC1_DMA_STREAM->CR |= (uint32_t)DMA_SxCR_DBM;
		ADC1_DMA_STREAM->M1AR = (uint32_t) & ADC_DMA_Buffer_B;
	}
	else
	{
		// Normal Mode
		ADC1_DMA_STREAM->CR &= ~(uint32_t)DMA_SxCR_DBM;
	}

	// Flags löschen
	DMA_ClearITPendingBit(DMA2_Stream0, DMA_IT_TCIF0);
	DMA_ClearITPendingBit(DMA2_Stream0, DMA_IT_HTIF0);

	// DMA-enable
	DMA_Cmd(ADC1_DMA_STREAM, ENABLE);

	// warten bis DMA-Stream enable
	while (DMA_GetCmdStatus(ADC1_DMA_STREAM) == DISABLE)
		;

	// NVIC neu initialisieren
	P_ADC_InitNVIC();

	// Timer wieder starten, falls notwendig
	if ((ADC_UB.status != ADC_READY) || (n == 1))
	{
		// Timer2 enable
		TIM_ARRPreloadConfig(TIM2, ENABLE);
		TIM_Cmd(TIM2, ENABLE);
	}

	// Merker zurücksetzen
	ADC_UB.dma_status = 0;
}

void P_ADC_InitADC(void)
{
	ADC_CommonInitTypeDef ADC_CommonInitStructure;
	ADC_InitTypeDef ADC_InitStructure;

	// Clock Enable
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_ADC1 | RCC_APB2Periph_ADC2, ENABLE);

	//-------------------------------------
	// ADC-Config (DualMode)
	//-------------------------------------

	ADC_CommonInitStructure.ADC_Mode = ADC_DualMode_RegSimult;
	ADC_CommonInitStructure.ADC_Prescaler = ADC1d_VORTEILER;
	ADC_CommonInitStructure.ADC_DMAAccessMode = ADC_DMAAccessMode_1;
	ADC_CommonInitStructure.ADC_TwoSamplingDelay = ADC_TwoSamplingDelay_5Cycles;
	ADC_CommonInit(&ADC_CommonInitStructure);

	//-------------------------------------
	// ADC1 (Master)
	//-------------------------------------

	ADC_InitStructure.ADC_Resolution = ADC_Resolution_12b;
	ADC_InitStructure.ADC_ScanConvMode = DISABLE; // nur ein Eintrag in der Regular-List -> disable
	ADC_InitStructure.ADC_ContinuousConvMode = DISABLE;
	ADC_InitStructure.ADC_ExternalTrigConv = ADC_ExternalTrigConv_T2_TRGO;
	ADC_InitStructure.ADC_ExternalTrigConvEdge =
			ADC_ExternalTrigConvEdge_Rising; // Master wird getriggert
	ADC_InitStructure.ADC_DataAlign = ADC_DataAlign_Right;
	ADC_InitStructure.ADC_NbrOfConversion = 1;
	ADC_Init(ADC1, &ADC_InitStructure);

	ADC_RegularChannelConfig(ADC1, ADC1d[0].ADC_CH, 1, ADC_SampleTime_3Cycles);

	//-------------------------------------
	// ADC2 (Slave)
	//-------------------------------------

	ADC_InitStructure.ADC_Resolution = ADC_Resolution_12b;
	ADC_InitStructure.ADC_ScanConvMode = DISABLE; // nur ein Eintrag in der Regular-List -> disable
	ADC_InitStructure.ADC_ContinuousConvMode = DISABLE;
	ADC_InitStructure.ADC_ExternalTrigConv = ADC_ExternalTrigConv_T2_TRGO;
	ADC_InitStructure.ADC_ExternalTrigConvEdge = ADC_ExternalTrigConvEdge_None; // Slave darf nicht gertriggert werden
	ADC_InitStructure.ADC_DataAlign = ADC_DataAlign_Right;
	ADC_InitStructure.ADC_NbrOfConversion = 1;
	ADC_Init(ADC2, &ADC_InitStructure);

	ADC_RegularChannelConfig(ADC2, ADC1d[1].ADC_CH, 1, ADC_SampleTime_3Cycles);
}

void P_ADC_Start(void)
{
	ADC_MultiModeDMARequestAfterLastTransferCmd(ENABLE);
	ADC_DMACmd(ADC1, ENABLE);
	ADC_Cmd(ADC1, ENABLE);
	ADC_Cmd(ADC2, ENABLE);
	// Timer2 enable
	TIM_ARRPreloadConfig(TIM2, ENABLE);
	TIM_Cmd(TIM2, ENABLE);
}
